--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="te9-ck-VYG">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CkM-7X-asu">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CkM-7X-asu">
                                         <rect key="frame" x="6" y="52" width="150" height="200"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="200" id="LIm-7m-EUC"/>
@@ -450,31 +450,23 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3O7-OA-YQt">
                                         <rect key="frame" x="6" y="523" width="381" height="236"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V7O-lO-zJP">
-                                                <rect key="frame" x="6" y="6" width="369" height="30"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SxH-ax-NTn">
+                                                <rect key="frame" x="8" y="8" width="129" height="60"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="xNE-V5-Qz1"/>
+                                                    <constraint firstAttribute="height" constant="60" id="QHi-PO-f0a"/>
+                                                    <constraint firstAttribute="width" constant="129" id="gQb-R3-lkQ"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AR3-Fo-9CU">
-                                                <rect key="frame" x="6" y="42" width="369" height="188"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                <connections>
+                                                    <action selector="recipeShowButton:" destination="VxW-bQ-wca" eventType="touchUpInside" id="7Rw-WJ-N8K"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                                         <constraints>
-                                            <constraint firstItem="AR3-Fo-9CU" firstAttribute="leading" secondItem="3O7-OA-YQt" secondAttribute="leading" constant="6" id="0zg-Dh-npY"/>
-                                            <constraint firstItem="V7O-lO-zJP" firstAttribute="leading" secondItem="3O7-OA-YQt" secondAttribute="leading" constant="6" id="3Le-Rb-iRX"/>
-                                            <constraint firstAttribute="bottom" secondItem="AR3-Fo-9CU" secondAttribute="bottom" constant="6" id="6HL-Yv-acj"/>
-                                            <constraint firstAttribute="trailing" secondItem="V7O-lO-zJP" secondAttribute="trailing" constant="6" id="8z9-AL-qyI"/>
-                                            <constraint firstItem="AR3-Fo-9CU" firstAttribute="top" secondItem="V7O-lO-zJP" secondAttribute="bottom" constant="6" id="cXx-rf-VOe"/>
-                                            <constraint firstItem="V7O-lO-zJP" firstAttribute="top" secondItem="3O7-OA-YQt" secondAttribute="top" constant="6" id="dRm-l5-PmJ"/>
-                                            <constraint firstAttribute="trailing" secondItem="AR3-Fo-9CU" secondAttribute="trailing" constant="6" id="nmV-6h-ed3"/>
+                                            <constraint firstItem="SxH-ax-NTn" firstAttribute="top" secondItem="3O7-OA-YQt" secondAttribute="top" constant="8" id="bph-68-tJ3"/>
+                                            <constraint firstItem="SxH-ax-NTn" firstAttribute="leading" secondItem="3O7-OA-YQt" secondAttribute="leading" constant="8" id="vRF-Zb-4J0"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -509,10 +501,15 @@
                             <constraint firstItem="te9-ck-VYG" firstAttribute="leading" secondItem="NGr-dL-AOc" secondAttribute="leading" id="lEn-Xs-mTm"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backgroundView" destination="te9-ck-VYG" id="BzP-1h-sIA"/>
+                        <outlet property="imageView" destination="CkM-7X-asu" id="9g1-nY-ieo"/>
+                        <outlet property="nameLabel" destination="3bY-vm-wy6" id="PZb-Pr-17p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVj-aV-wPu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3239" y="-442"/>
+            <point key="canvasLocation" x="3238.9312977099235" y="-442.25352112676057"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="tCw-wf-Ekm">
