--- a/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
+++ b/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
@@ -24,9 +24,9 @@
                             <constraint firstAttribute="height" constant="100" id="hYN-w9-sOY"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Xal-PS-FWJ">
-                        <rect key="frame" x="8" y="133" width="134" height="23"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xal-PS-FWJ">
+                        <rect key="frame" x="8" y="133" width="134" height="39"/>
+                        <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -39,7 +39,7 @@
                 <constraint firstItem="dyi-ww-FeT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="25" id="Ct6-3m-7Ee"/>
                 <constraint firstItem="Xal-PS-FWJ" firstAttribute="top" secondItem="dyi-ww-FeT" secondAttribute="bottom" constant="8" id="EI0-8K-n55"/>
                 <constraint firstItem="dyi-ww-FeT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="25" id="bEC-W3-7gc"/>
-                <constraint firstAttribute="bottom" secondItem="Xal-PS-FWJ" secondAttribute="bottom" constant="24" id="ifS-4h-qbj"/>
+                <constraint firstAttribute="bottom" secondItem="Xal-PS-FWJ" secondAttribute="bottom" constant="8" id="ifS-4h-qbj"/>
                 <constraint firstItem="Xal-PS-FWJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="wdv-Wn-5XB"/>
             </constraints>
             <size key="customSize" width="150" height="180"/>
